--- a/gui.glade
+++ b/gui.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.1 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkListStore" id="can_store">
@@ -53,7 +53,12 @@
   <object class="GtkImage" id="image5">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
-    <property name="stock">gtk-add</property>
+    <property name="stock">gtk-save</property>
+  </object>
+  <object class="GtkImage" id="image6">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+    <property name="stock">gtk-save-as</property>
   </object>
   <object class="GtkWindow" id="RICSWIN">
     <property name="name">ricswin</property>
@@ -88,6 +93,7 @@
                         <property name="can-focus">False</property>
                         <property name="use-underline">True</property>
                         <property name="use-stock">True</property>
+                        <accelerator key="n" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -97,24 +103,31 @@
                         <property name="can-focus">False</property>
                         <property name="use-underline">True</property>
                         <property name="use-stock">True</property>
+                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="file_save">
-                        <property name="label">gtk-save</property>
+                        <property name="label">_Export</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="tooltip-text" translatable="yes">Export the unparsed data as CSV</property>
                         <property name="use-underline">True</property>
-                        <property name="use-stock">True</property>
+                        <property name="image">image5</property>
+                        <property name="use-stock">False</property>
+                        <accelerator key="s" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="file_save_as">
-                        <property name="label">gtk-save-as</property>
+                        <property name="label">E_xport Parsed</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="tooltip-text" translatable="yes">Export the parsed version of the data as CSV</property>
                         <property name="use-underline">True</property>
-                        <property name="use-stock">True</property>
+                        <property name="image">image6</property>
+                        <property name="use-stock">False</property>
+                        <accelerator key="e" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                   </object>
@@ -139,6 +152,7 @@
                         <property name="tooltip-text" translatable="yes">Connect to the default server path</property>
                         <property name="image">image1</property>
                         <property name="use-stock">False</property>
+                        <accelerator key="l" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -152,9 +166,10 @@
                         <property name="label" translatable="yes">Start Listening Thread</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Fork the Listening Thread</property>
+                        <property name="tooltip-text" translatable="yes">Fork a Listening Thread</property>
                         <property name="image">image2</property>
                         <property name="use-stock">False</property>
+                        <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                   </object>
@@ -180,13 +195,14 @@
                         <property name="use-underline">True</property>
                         <property name="image">image3</property>
                         <property name="use-stock">False</property>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
                       <object class="GtkCheckMenuItem" id="filter_cont">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Filter the messages as they are received</property>
+                        <property name="tooltip-text" translatable="yes">Filter the messages as they are received. </property>
                         <property name="label" translatable="yes">Continuous</property>
                         <property name="use-underline">True</property>
                       </object>
@@ -202,19 +218,9 @@
                         <property name="label" translatable="yes">_Load Script</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Load a Lua Filter Script</property>
+                        <property name="tooltip-text" translatable="yes">Load the Lua Filter script</property>
                         <property name="use-underline">True</property>
                         <property name="image">image4</property>
-                        <property name="use-stock">False</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkImageMenuItem">
-                        <property name="label" translatable="yes">Run</property>
-                        <property name="visible">True</property>
-                        <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Load and apply script</property>
-                        <property name="image">image5</property>
                         <property name="use-stock">False</property>
                       </object>
                     </child>
@@ -382,6 +388,25 @@
             <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkStatusbar" id="status">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="margin-left">10</property>
+            <property name="margin-right">10</property>
+            <property name="margin-start">10</property>
+            <property name="margin-end">10</property>
+            <property name="margin-top">6</property>
+            <property name="margin-bottom">6</property>
+            <property name="orientation">vertical</property>
+            <property name="spacing">2</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
