--- a/gui.glade
+++ b/gui.glade
@@ -28,7 +28,71 @@
       <column type="gchararray"/>
       <!-- column-name color -->
       <column type="gchararray"/>
+      <!-- column-name timestamp -->
+      <column type="gchararray"/>
     </columns>
+  </object>
+  <object class="GtkDialog" id="dialog_connect">
+    <property name="can-focus">False</property>
+    <property name="title" translatable="yes">Connect to...</property>
+    <property name="type-hint">dialog</property>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can-focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can-focus">False</property>
+            <property name="layout-style">end</property>
+            <child>
+              <object class="GtkButton" id="dc_ok">
+                <property name="label">gtk-connect</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="dc_cancel">
+                <property name="label">gtk-cancel</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkEntry" id="connectentry">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
+    </child>
   </object>
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
@@ -54,11 +118,6 @@
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="stock">gtk-save</property>
-  </object>
-  <object class="GtkImage" id="image6">
-    <property name="visible">True</property>
-    <property name="can-focus">False</property>
-    <property name="stock">gtk-save-as</property>
   </object>
   <object class="GtkWindow" id="RICSWIN">
     <property name="name">ricswin</property>
@@ -119,15 +178,16 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkImageMenuItem" id="file_save_as">
-                        <property name="label">E_xport Parsed</property>
+                      <object class="GtkSeparatorMenuItem">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Export the parsed version of the data as CSV</property>
-                        <property name="use-underline">True</property>
-                        <property name="image">image6</property>
-                        <property name="use-stock">False</property>
-                        <accelerator key="e" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="label" translatable="yes">Reset Timestamp</property>
                       </object>
                     </child>
                   </object>
@@ -247,6 +307,17 @@
                 <property name="model">can_store</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection"/>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn">
+                    <property name="title" translatable="yes">Time</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">12</attribute>
+                      </attributes>
+                    </child>
+                  </object>
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn">
